test/tests/operators/serve_uds/validation/error_missing_parent.txt
error: failed to inspect UNIX domain socket directory
 --> tests/operators/serve_uds/validation/error_missing_parent.tql:5:11
  |
5 | serve_uds "/tmp/tenzir-uds-missing-parent/test.sock" {
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
  = note: path: /tmp/tenzir-uds-missing-parent
  = note: reason: No such file or directory
